[package]
name = "pqkd"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.2"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.128"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
httpmock = "0.7.0"
