[package]
name = "pqkd"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.2"
reqwest = { version = "0.12.9", features = ["json", "native-tls", "blocking"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "^1.0.132"
thiserror = "1.0.65"
serde = { version = "1.0.214", features = ["derive"]}

[dev-dependencies]
httpmock = "0.7.0"
