[package]
name = "pqkd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Client pqkd"
homepage = "https://www.quantumblockchains.io/"
repository = "https://github.com/Quantum-Blockchains/pqkd-client-rust"

[dependencies]
url = "2.3.1"
reqwest = { version = "0.11.27", features = ["json", "native-tls", "blocking"] }
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0.85"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"]}

[dev-dependencies]
httpmock = "0.7.0"
